Met all user stories for this project. Aiming for progress over perfection.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,23 +11,23 @@
 </head>
 
 <body>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-
-    <main>
-        <div id="headContainer">
-            <h1>Keanu Reeves</h1>
+    <main id="main">
+        <div id="img-div">
+            <h1 id="title">Keanu Reeves</h1>
             <p>The Best Modern Action Star</p>
             <figure>
-                <img id="keanuPic"
+                <img id="image"
                     src="https://media.newyorker.com/photos/5cf5728d47f7cc877a506d9b/master/w_960,c_limit/Fry-KeanuReeves-2.jpg"
                     alt="Keanu Reeves holding his hands is a prayer position.">
 
-                <figcaption id="credit">Photograph by Karwai Tang / Getty</figcaption>
+                <figcaption id="img-caption">Keanu Reeves clasping his hands together.</figcaption>
             </figure>
         </div>
         <div id="midContainer">
-            <p id="timelineHeader"> Here is a brief timeline of Keanu's life and accomplishments</p>
-            <ul>
+            <p id="tribute-info"> Here is a brief timeline of Keanu's life and accomplishments</p>
+            <ul id="timeline">
                 <li><b>1964</b> - Born in Beirut, Lebanon</li>
                 <li><b>1985</b> - Makes acting debut in television series called "Hanging In"</li>
                 <li><b>1989</b> - Stars in "Bill and Ted's Excellent Adventure", his first commercial and critical
@@ -55,8 +56,17 @@
             <p><i>
                     -- Libby Torres, Keanu Reeves reporter for Insider</i> </p>
         </div>
+        <div>
+            <p>For more information on Keanu Reeves, please check out his <a id="tribute-link"
+                    href="https://en.wikipedia.org/wiki/Keanu_Reeves" target="_blank">Wikipedia page</a>
+
+            </p>
+        </div>
 
     </main>
+
+
 </body>
+
 
 </html>
